fluxcd/02-applications/immich/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    name: immich
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: photos
    apps.kubernetes.io/managed-by: flux
    gateway.networking.k8s.io/allowed: "true"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
