fluxcd/02-applications/immich/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: immich-to-shared-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/name: immich
    apps.kubernetes.io/managed-by: flux
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: immich
  to:
    - group: "gateway.networking.k8s.io"
      kind: Gateway
      name: shared-gateway
